# rust-template

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs
scripts/common/: cd-project-root.ps1  cd-project-root.sh  wait-if-double-clicked.ps1
scripts/linux/: build.sh  check.sh  clippy.sh  format.sh  rename-project.sh  test.sh
scripts/macos/: build.sh  check.sh  clippy.sh  format.sh  rename-project.sh  test.sh
scripts/windows/: build-msi.ps1  build.ps1  check.ps1  clippy.ps1  format.ps1  rename-project.ps1  test.ps1
src/: lib.rs  main.rs
tests/: integration_test.rs
wix/: main.wxs
